# libretro_core_glad

./: CMakeLists.txt  README.md
src/: lib.c  main.c
